--- a/hello.css
+++ b/hello.css
@@ -1,5 +1,14 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 p {
-  text-align: center;
-  margin-top: 100px;
-  font-size: 20px;
+  font-size: 50px;
+}
+small a {
+  margin-left: 15px;
+  color: lightgray;
+  text-decoration: none;
 }
